--- a/phone.css
+++ b/phone.css
@@ -17,19 +17,27 @@
     font-size: 41px;
 }
 
+.phonepic{
+    display: block;
+    margin: 30px 0px;
+}
+.pc-pic{
+    display: none;
+}
+
 .mainleft {
     padding: 0px 20px;
     margin-top: 20px;
 }
 
 .mainleft p {
-    margin-top: 400px;
+    
     font-size: 19px;
 }
 
 .mainright {
     height: 315px;
-    position: absolute;
+   
     width: 100%;
     top: 300px;
     padding: 0px 10px;
@@ -63,7 +71,9 @@
 .learnmore {
     display: none;
 }
-
+.left-engine1{
+    width: 50%;
+}
 .left-engine1 h1 {
     font-size: 20px;
 }
@@ -74,7 +84,7 @@
 }
 
 .left-engine2 img {
-    width: 165px;
+    width: 150px;
 }
 
 .left-engine2 {
@@ -103,6 +113,7 @@
 
 .happen {
     border: none;
+    width: 100%;
 }
 
 .happen h1 {
@@ -270,6 +281,10 @@ footer {
     gap: 15px;
     margin: 0 auto;
 }
+.formbtn{
+    width: 100%;
+    margin-left: 0px;
+}
 
 .foot-end {
     /* border: none; */
@@ -279,8 +294,10 @@ footer {
 
 .foot-end ul {
     gap: 5px;
-    width: 85%;
-    justify-content: center;
+    width: 100%;
+   
+    display: block;
+    text-align: center;
 }
 
 .foot-btn {
