--- a/style.css
+++ b/style.css
@@ -61,6 +61,12 @@
 
 
 }
+.phonepic{
+    display: none;
+}
+.pc-pic{
+    display: block;
+}
 
 .bookbtn {
     width: 264px;
@@ -118,7 +124,7 @@
 
 .services {
     display: flex;
-    padding-left: 60px;
+    padding-left: 65px;
     gap: 40px;
     flex-wrap: wrap;
     align-items: center;
@@ -364,11 +370,11 @@ textarea {
 }
 
 .formbtn {
-    width: 100%;
+    width: 99%;
     border-radius: 14px;
     height: 68px;
     padding: 20px 35px 20px 35px;
-
+    margin-left: 7px;
 
 }
 
@@ -487,7 +493,7 @@ footer {
     height: 68px;
     width: 249px;
     border-radius: 14px;
-    padding: 20px 35px 20px 35px;
+    padding: 20px 20px;
     font-size: 20px;
     font-weight: bold;
 }
@@ -495,6 +501,8 @@ footer {
 .subscribe {
     background-color: #B9FF66;
     color: black;
+    padding: 20px 0px;
+    text-align: center;
 }
 
 .email {
