after minor changes

--- a/phone.css
+++ b/phone.css
@@ -1,5 +1,12 @@
 /* Navbar */
 
+
+:root{
+    --lightgreen: #B9FF66;
+    --darkcolor: #191A23;
+    --lightcolor: #F3F3F3;
+}
+
 .container-fluid {
     width: 96% !important;
 }
@@ -117,7 +124,7 @@
 }
 
 .happen h1 {
-    background-color: #F3F3F3;
+    background-color: var(--lightcolor);
     display: block;
     width: auto;
     padding: 0px;
@@ -151,7 +158,7 @@
 .listbox {
     width: 95%;
     height: 98px;
-    background-color: #F3F3F3;
+    background-color: var(--lightcolor);
     justify-content: center;
 }
 
@@ -181,7 +188,7 @@
 .line-circle {
     height: 30px;
     width: 30px;
-    background-color: #F3F3F3;
+    background-color: var(--lightcolor);
     border: 1px solid black;
 }
 
@@ -214,7 +221,7 @@ textarea {
 }
 
 form {
-    background: #F3F3F3;
+    background: var(--lightcolor);
     border-radius: 45px;
     height: 450px;
     padding: 40px 8px;
@@ -280,6 +287,7 @@ footer {
     align-items: center;
     gap: 15px;
     margin: 0 auto;
+    margin-bottom: 30px;
 }
 .formbtn{
     width: 100%;
@@ -292,6 +300,11 @@ footer {
     margin-top: 100px;
 }
 
+
+.foot-main {
+    justify-content: center;
+    margin-top: 30px;
+}
 .foot-end ul {
     gap: 5px;
     width: 100%;
@@ -310,6 +323,10 @@ footer {
     padding: 58px 20px 58px 20px;
 }
 
+.blog{
+    display: none;
+}
+
 .foot-btn a {
     width: 100%;
 }
@@ -320,8 +337,4 @@ footer {
 
 .footbox {
     height: auto;
-}
-
-.foot-main {
-    justify-content: center;
 }
