--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     font-family: "Space Grotesk", sans-serif;
 }
 
+:root{
+    --lightgreen: #B9FF66;
+    --darkcolor: #191A23;
+    --lightcolor: #F3F3F3;
+}
+
 /* Navbar */
 
 
@@ -74,7 +80,7 @@
     border-radius: 14px !important;
     padding: 20px, 35px, 20px, 35px !important;
     gap: 10px;
-    background-color: black !important;
+    background-color: var(--darkcolor) !important;
 
 }
 
@@ -133,7 +139,7 @@
 
 
 .servicebtn {
-    background-color: #B9FF66 !important;
+    background-color: var(--lightgreen) !important;
     border: none;
     padding: 0px 30px;
     height: 51px;
@@ -167,12 +173,12 @@
 }
 
 .left-seo {
-    background-color: #F3F3F3;
+    background-color: var(--lightcolor);
     gap: 10px;
 }
 
 .right-seo {
-    background-color: #B9FF66;
+    background-color: var(--lightgreen);
     gap: 40px;
 }
 
@@ -189,7 +195,7 @@
 }
 
 .left-engine1 h1 {
-    background-color: #B9FF66;
+    background-color: var(--lightgreen);
     display: inline-block;
     margin-bottom: 0;
     padding: 7px;
@@ -198,7 +204,7 @@
 }
 
 .right-engine1 h1 {
-    background-color: #F3F3F3;
+    background-color: var(--lightcolor);
 }
 
 .left-engine2 {
@@ -232,7 +238,7 @@
 .listbox {
     height: 279px;
     width: 90%;
-    background-color: #B9FF66;
+    background-color: var(--lightgreen);
     border-radius: 45px;
     display: flex;
     flex-direction: column;
@@ -242,7 +248,7 @@
 }
 
 .line-circle {
-    background-color: #F3F3F3;
+    background-color: var(--lightcolor);
     border-radius: 50%;
     padding: 20px;
     height: 70px;
@@ -275,7 +281,7 @@
 .listbox-grey {
     height: 159px;
     width: 90%;
-    background-color: #F3F3F3;
+    background-color: var(--lightcolor);
     border-radius: 45px;
     display: flex;
     gap: 30px;
@@ -287,7 +293,7 @@
 }
 
 .grey-circle {
-    background-color: #B9FF66;
+    background-color: var(--lightgreen);
 
 
 }
@@ -308,7 +314,7 @@
 .formbox {
     margin: 0 auto;
     width: 90%;
-    background-color: #F3F3F3;
+    background-color: var(--lightcolor);
     height: 773px;
     border-radius: 45px;
     display: flex;
@@ -393,7 +399,7 @@ form {
 
 footer {
     height: 515px;
-    background-color: #191A23;
+    background-color: var(--darkcolor);
     margin: 0 auto;
     width: 90%;
     border-radius: 45px 45px 0px 0px;
@@ -459,7 +465,7 @@ footer {
 .foot-form button {
     height: 26px;
     width: 126px;
-    background-color: #B9FF66;
+    background-color: var(--lightgreen);
 
     border: none;
     padding: 0px 7px;
@@ -499,7 +505,7 @@ footer {
 }
 
 .subscribe {
-    background-color: #B9FF66;
+    background-color: var(--lightgreen);
     color: black;
     padding: 20px 0px;
     text-align: center;
